Debugged fk_level function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
     "\n",
     "    if word in d:\n",
     "        return d[word]\n",
-    "    \n",
+    "\n",
     "    # Syllables by counting vowel clusters. 'Y' can sometimes act as a vowel in English\n",
     "    syl_by_vowels = len(re.findall(r'[aeiouy]+', word))\n",
     "\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,8 @@
     "    num_sentences = len(sentences)\n",
     "    num_words = len(words)\n",
     "    # Uses the count_syl function\n",
-    "    num_syllables = sum(count_syl(word, d) for word in words)\n",
+    "    num_syllables = sum(int(count_syl(word, d)) for word in words)\n",
+    "\n",
     "\n",
     "    # According to the Flesch-Kincaid Grade Level formula\n",
     "    fk_grade = 0.39 * (num_words / num_sentences) + 11.8 * (num_syllables / num_words) - 15.59\n",
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -465,15 +466,16 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
+     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'list'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[67]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(df.head())\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(get_ttrs(df))\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_fks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     14\u001b[39m df = pd.read_pickle(Path.cwd() / \u001b[33m\"\u001b[39m\u001b[33mpickles\u001b[39m\u001b[33m\"\u001b[39m /\u001b[33m\"\u001b[39m\u001b[33mname.pickle\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# print(adjective_counts(df))\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[69]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(df.head())\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(get_ttrs(df))\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_fks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     14\u001b[39m df = pd.read_pickle(Path.cwd() / \u001b[33m\"\u001b[39m\u001b[33mpickles\u001b[39m\u001b[33m\"\u001b[39m /\u001b[33m\"\u001b[39m\u001b[33mname.pickle\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# print(adjective_counts(df))\u001b[39;00m\n",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mget_fks\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m      4\u001b[39m cmudict = nltk.corpus.cmudict.dict()\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, row \u001b[38;5;129;01min\u001b[39;00m df.iterrows():\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     results[row[\u001b[33m\"\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m\"\u001b[39m]] = \u001b[38;5;28mround\u001b[39m(\u001b[43mfk_level\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtext\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcmudict\u001b[49m\u001b[43m)\u001b[49m, \u001b[32m4\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 21\u001b[39m, in \u001b[36mfk_level\u001b[39m\u001b[34m(text, d)\u001b[39m\n\u001b[32m     19\u001b[39m num_words = \u001b[38;5;28mlen\u001b[39m(words)\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Uses the count_syl function\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m num_syllables = \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcount_syl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mword\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# According to the Flesch-Kincaid Grade Level formula\u001b[39;00m\n\u001b[32m     24\u001b[39m fk_grade = \u001b[32m0.39\u001b[39m * (num_words / num_sentences) + \u001b[32m11.8\u001b[39m * (num_syllables / num_words) - \u001b[32m15.59\u001b[39m\n",
-      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'int' and 'list'"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[68]\u001b[39m\u001b[32m, line 21\u001b[39m, in \u001b[36mfk_level\u001b[39m\u001b[34m(text, d)\u001b[39m\n\u001b[32m     19\u001b[39m num_words = \u001b[38;5;28mlen\u001b[39m(words)\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Uses the count_syl function\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m num_syllables = \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcount_syl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mword\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# According to the Flesch-Kincaid Grade Level formula\u001b[39;00m\n\u001b[32m     25\u001b[39m fk_grade = \u001b[32m0.39\u001b[39m * (num_words / num_sentences) + \u001b[32m11.8\u001b[39m * (num_syllables / num_words) - \u001b[32m15.59\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[68]\u001b[39m\u001b[32m, line 21\u001b[39m, in \u001b[36m<genexpr>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m     19\u001b[39m num_words = \u001b[38;5;28mlen\u001b[39m(words)\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Uses the count_syl function\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m num_syllables = \u001b[38;5;28msum\u001b[39m(\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcount_syl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words)\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# According to the Flesch-Kincaid Grade Level formula\u001b[39;00m\n\u001b[32m     25\u001b[39m fk_grade = \u001b[32m0.39\u001b[39m * (num_words / num_sentences) + \u001b[32m11.8\u001b[39m * (num_syllables / num_words) - \u001b[32m15.59\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: int() argument must be a string, a bytes-like object or a real number, not 'list'"
      ]
     }
    ],
