Implemented common_objects function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -42,6 +42,7 @@
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "from string import punctuation\n",
     "from nltk.corpus import cmudict\n",
+    "from collections import Counter\n",
     "\n",
     "\n",
     "nltk.download('punkt')\n",
@@ -393,6 +394,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def common_objects(doc, n=10):\n",
+    "    \"\"\"returns a list of the ten most common syntactic objects overall in the text\"\"\"\n",
+    "    objects = [token.text.lower() for token in doc if token.dep_ == \"dobj\"]\n",
+    "    return Counter(objects).most_common(n)\n",
+    "\n",
+    "# print(common_objects(df.loc[0, \"parsed\"], 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def subjects_by_verb_pmi(doc, target_verb):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    pass"
@@ -422,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
